<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Screen"
    android:background="@color/white">

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/image"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aquire_bw"
        android:text="@string/above_text"
        android:textColor="@color/blue"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@id/rb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg" />

    <LinearLayout
        android:id="@+id/rb"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cp"
            android:textSize="16sp"
            android:onClick="call_ep"
            android:fontFamily="@font/aquire_bw"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/blue"
                android:drawableStart="@drawable/google"
                android:backgroundTint="#00000000"
                android:text="@string/google"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/blue"
                android:drawableStart="@drawable/fb"
                android:backgroundTint="#00000000"
                android:text="@string/fb"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>