<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otp_Screen2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <Button
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="#00000000"
            android:drawableStart="@drawable/mback"
            android:drawableTint="@color/blue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/signup_lottie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="-20dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/otp_anim" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/blue" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:fontFamily="@font/aquire_bw"
                    android:gravity="top|center"
                    android:text="@string/otp1"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/blue" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/otps2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/otp2"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.chaos.view.PinView
            android:id="@+id/enter_otp2"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:textColor="@color/blue"
            app:cursorColor="@color/blue"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemSpacing="10dp"
            app:itemWidth="40dp"
            app:lineColor="@color/blue" />


        <TextView
            android:id="@+id/otps3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/otp3"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/resendotp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:fontFamily="@font/aquire_bw"
            android:text="@string/otp4"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_verify2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:background="@color/blue"
            android:fontFamily="@font/aquire_bw"
            android:text="@string/otp5"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>