<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterPhoneNumber"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/back_From_ep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mback"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ep"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/epd"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:drawablePadding="10dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue"
            app:hintTextColor="@color/blue"
            app:startIconDrawable="@drawable/india_icon">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/blue"
                android:textColor="@color/blue"
                android:inputType="number"
                android:textCursorDrawable="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:src="@drawable/pn"/>

    </LinearLayout>

    <Button
        android:id="@+id/send_pnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintVertical_bias="1"
        android:background="@color/blue"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/aquire_bw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>